--- a/SmartHome.fr/layout/cart.html
+++ b/SmartHome.fr/layout/cart.html
@@ -1,6 +1,9 @@
 <!-- Panier Sidebar -->
 <div id="cart-backdrop" class="cart-backdrop"></div>
 <div id="cart-sidebar" class="cart-sidebar">
+    <div class="cart-loader">
+        <div class="spinner"></div>
+    </div>
     <div class="cart-header">
         <h3> <i class="fas fa-shopping-cart"></i> Panier</h3>
         <span class="close-cart">&times;</span>
