--- a/MixAndLights/styles/style.css
+++ b/MixAndLights/styles/style.css
@@ -68,7 +68,7 @@ body, html {
     width: 100vw;
     height: 100vh;
     
-    background: radial-gradient(circle, rgb(22, 19, 40) 0%, rgba(5, 4, 19, 1) 100%);
+    background: radial-gradient(circle, #171448 0%, #161315 100%);
 
     -webkit-mask-image: radial-gradient(circle, transparent 160px, white 161px);
     -webkit-mask-size: auto;
