--- a/smag/styles.css
+++ b/smag/styles.css
@@ -107,7 +107,7 @@ html {
 
 .logo {
   display: block;
-  margin: 0 auto;
+  margin: 50px auto;
   position: relative;
 }
 
@@ -156,7 +156,7 @@ body {
   right: 0;
   top: 0;
   min-width: 100%;
-  max-height: 500px;
+  max-height: 700px;
   overflow: hidden;
   z-index: -1;
 }
