--- a/smag/styles.css
+++ b/smag/styles.css
@@ -155,16 +155,11 @@ body {
   position: fixed;
   right: 0;
   top: 0;
-  min-width: 100%;
-  max-height: 700px;
-  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  background: url('Images/bg.png') no-repeat center center fixed;
+  background-size: cover;
   z-index: -1;
-}
-
-#video-background video {
-  min-height: 125vh;
-  width: 100%;
-  object-fit: cover;
 }
 
 .page-container {
