--- a/smag/styles.css
+++ b/smag/styles.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;900&display=swap');
 
+@font-face {
+  font-family: 'Delfino';
+  src: url('Images/Delfino.ttf') format('truetype');
+}
+
 html {
   overflow-y: scroll; overflow-x:hidden;
 }
@@ -10,6 +15,12 @@ html {
   box-sizing: border-box;
   color: #fff;
   font-family: 'poppins', sans-serif;
+}
+
+body {
+ background-image: url(Images/bg.png);
+ background-attachment: fixed;
+ background-size: cover
 }
 
 ::-webkit-scrollbar {
@@ -155,11 +166,16 @@ body {
   position: fixed;
   right: 0;
   top: 0;
-  width: 100vw;
-  height: 100vh;
-  background: url('Images/bg.png') no-repeat center center fixed;
-  background-size: cover;
+  min-width: 100%;
+  max-height: 700px;
+  overflow: hidden;
   z-index: -1;
+}
+
+#video-background video {
+  min-height: 125vh;
+  width: 100%;
+  object-fit: cover;
 }
 
 .page-container {
@@ -335,10 +351,36 @@ h5{
 .player .imgbox img{
   top: 0;
   left: 0;
-  margin-top: 2em;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 20px 20px 0 0;
+}
+
+.player .imgbox .boxart-text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 20px;
+  border-radius: 0 0 20px 20px;
+  text-align: center;
+  font-family: 'Delfino', 'Poppins', sans-serif;
+}
+
+.player .imgbox .galaxy-name {
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 5px;
+  text-shadow: 2px 2px 4px rgba(0,0,0,0.8);
+}
+
+.player .imgbox .composer {
+  color: #A1AAC6;
+  font-size: 16px;
+  font-weight: normal;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.8);
 }
 
 .player audio {
