Fix Delfino.ttf path in CSS

--- a/smag/styles.css
+++ b/smag/styles.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: 'Delfino';
-  src: url('Images/Delfino.ttf') format('truetype');
+  src: url('Delfino.ttf') format('truetype');
 }
 
 html {
