--- a/smag/styles.css
+++ b/smag/styles.css
@@ -374,6 +374,7 @@ h5{
   font-weight: bold;
   margin-bottom: 5px;
   text-shadow: 2px 2px 4px rgba(0,0,0,0.8);
+  font-family: 'Delfino', 'Poppins', sans-serif;
 }
 
 .player .imgbox .composer {
@@ -381,6 +382,7 @@ h5{
   font-size: 16px;
   font-weight: normal;
   text-shadow: 1px 1px 2px rgba(0,0,0,0.8);
+  font-family: 'Delfino', 'Poppins', sans-serif;
 }
 
 .player audio {
