--- a/smag/styles.css
+++ b/smag/styles.css
@@ -359,7 +359,7 @@ h5{
 
 .player .imgbox .boxart-text {
   position: absolute;
-  bottom: 0;
+  bottom: 30px;
   left: 0;
   right: 0;
   padding: 20px;
@@ -370,16 +370,17 @@ h5{
 
 .player .imgbox .galaxy-name {
   color: white;
-  font-size: 24px;
+  font-size: 31px;
   font-weight: bold;
   margin-bottom: 5px;
   text-shadow: 2px 2px 4px rgba(0,0,0,0.8);
   font-family: 'Delfino', 'Poppins', sans-serif;
+  text-transform: none;
 }
 
 .player .imgbox .composer {
   color: #A1AAC6;
-  font-size: 16px;
+  font-size: 24px;
   font-weight: normal;
   text-shadow: 1px 1px 2px rgba(0,0,0,0.8);
   font-family: 'Delfino', 'Poppins', sans-serif;
